--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
 </head>
 <body>
     <h1>Welcome to My Website!</h1>
-    <p>This is my first webpage hosted on GitHub Pages.</p>
+    <p>I’m Jiaming Liu, currently harnessing the synergies of Data Science and Business 
+Administration at Northeastern University, with an expected graduation in May 2027. My 
+academic journey is fueled by a profound interest in how data shapes decision-making and 
+drives efficiency in the digital era.
+At Northeastern, I've engaged deeply with coursework that spans financial/managerial
+accounting, cybersecurity, and advanced data programming. My toolkit includes MS Excel’s 
+pivot table, Python and its data-centric libraries such as Pandas, Scikitlearn, and Random 
+Forests, equipping me with the analytical prowess to turn raw data into actionable insights.
+I applied these skills as part of my job during my internship at Shanghai Pudong Development 
+Bank. Excel functions boost the efficiency of calculations on individual loan data while pivot 
+tables can extract the relevant features with their corresponding data immediately. Additionally, I’ve undertaken a Data Science Project focused on Boston’s transportation, aiming to improve the MBTA system through data analytics on ridership at several stations, during various times of the day or different seasons. My previous experiences range from participating in PWC's ESG Challenge, where I explored sustainable solutions to medical plastic waste during COVID-19, to leading a recognized social research program regarding the migrant issues on Shanghai's Chongming Island.
+I’m not only about numbers and data. My tenure as an organizer for the Shanghai International Students Union and my contribution to UNICEF’s monthly donation plan reflect my commitment to community and global citizenship. While proficient in both Chinese and 
+English diverse skill sets, I’m able to operate effectively in a globalized business environment.
+I am enthusiastic about opportunities where I can bring my passion for data science to solve 
+complex problems and generate meaningful impact. Whether through strategic business 
+analysis or innovative data solutions, I'm keen on collaborating with professionals at the 
+forefront of blending technology with business acumen.
+</p>
 </body>
 </html>
