--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@ English diverse skill sets, I’m able to operate effectively in a globalized bu
 I am enthusiastic about opportunities where I can bring my passion for data science to solve 
 complex problems and generate meaningful impact. Whether through strategic business 
 analysis or innovative data solutions, I'm keen on collaborating with professionals at the 
-forefront of blending technology with business acumen.
-</p>
+forefront of blending technology with business acumen.</p>
 </body>
 </html>
