--- a/index.html
+++ b/index.html
@@ -22,5 +22,9 @@ I am enthusiastic about opportunities where I can bring my passion for data scie
 complex problems and generate meaningful impact. Whether through strategic business 
 analysis or innovative data solutions, I'm keen on collaborating with professionals at the 
 forefront of blending technology with business acumen.</p>
+
+<img src="C:\Users\John\Desktop\wallpaper\2024 Shanghai Zhou.avif" alt="Zhou Guanyu in F1 Shanghai Grand Prix" width="300">
 </body>
+
+    
 </html>
