--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ complex problems and generate meaningful impact. Whether through strategic busin
 analysis or innovative data solutions, I'm keen on collaborating with professionals at the 
 forefront of blending technology with business acumen.</p>
 
-    <img src="C:\Users\John\Desktop\wallpaper\2024 Shanghai Zhou.avif" alt="Zhou Guanyu in F1 Shanghai Grand Prix" width="300">
+    <img src='https://preview.redd.it/stake-f1-team-kick-sauber-zhou-gaunyu-canon-f-1-kodak-gold-v0-3e6mkzqwo3lc1.jpeg?width=1080&crop=smart&auto=webp&s=d0e3994e6d19d41618125d09ddb8f17fe4599b37' alt="Zhou Guanyu in F1" width="300">
 </body>
 
     
