--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,7 @@
     <title>About Me</title>
 </head>
 <body>
+    <h1>About Me</h1> 
     <h2>More About My Interests</h2>
     <p>Formula 1, often abbreviated as F1, is recognized as the pinnacle of motorsport, offering a thrilling combination of speed, engineering, and fierce competition. As the world’s leading racing series, F1 showcases the skills of the most talented drivers, who compete in high-performance, single-seater cars across various tracks around the globe. The series consists of races known as Grands Prix, which take place on a mix of legendary circuits and challenging street tracks in cities like Monaco, Melbourne, and São Paulo.
 
