--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 </head>
 <body>
     <h1>Welcome to My Website!</h1>
+    <nav>
+        <a href="index.html">Home</a> | 
+        <a href="index2.html">About Me</a>
+    </nav>
     <p>I’m Jiaming Liu, currently harnessing the synergies of Data Science and Business 
 Administration at Northeastern University, with an expected graduation in May 2027. My 
 academic journey is fueled by a profound interest in how data shapes decision-making and 
