--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@ analysis or innovative data solutions, I'm keen on collaborating with profession
 forefront of blending technology with business acumen.</p>
 
     <img src='https://preview.redd.it/stake-f1-team-kick-sauber-zhou-gaunyu-canon-f-1-kodak-gold-v0-3e6mkzqwo3lc1.jpeg?width=1080&crop=smart&auto=webp&s=d0e3994e6d19d41618125d09ddb8f17fe4599b37' alt="Zhou Guanyu in F1" width="300">
+    <section>
+        <h2>Contact Me</h2>
+        <p>You can reach out to me via the following channels:</p>
+        <ul>
+            <li><a href="mailto:liu.jiamin@northeastern.edu">Email</a></li>
+            <li><a href="www.linkedin.com/in/jiaming-liu-8ba752295" target="_blank">LinkedIn</a></li>
+        </ul>
+    </section>
+
+
 </body>
 
     
