--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>My GitHub Page</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
     <h1>Welcome to My Website!</h1>
@@ -33,7 +35,7 @@ forefront of blending technology with business acumen.</p>
         <p>You can reach out to me via the following channels:</p>
         <ul>
             <li><a href="mailto:liu.jiamin@northeastern.edu">Email</a></li>
-            <li><a href="www.linkedin.com/in/jiaming-liu-8ba752295" target="_blank">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/jiaming-liu-8ba752295" target="_blank">LinkedIn</a></li>
         </ul>
     </section>
 
