--- a/index2.html
+++ b/index2.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>About Me</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
     <h1>About Me</h1> 
